added welcome messages

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
     <body>
         <h1> Welcome</h1>
+        <h2 id = 'bold'> This is some stuff about me</h2>
+        <p>Hello! I am from SJ, CA</p>
     </body>
 </html>
